Pod-client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-client
  template:
    metadata:
      labels:
        app: pod-client
    spec:
      containers:
        - name: client-db-container
          image: postgres:15
          imagePullPolicy: Always
          ports:
            - containerPort: 5433
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: client-storage

        - name: client-api-container
          image: goodfoodclient  # Image gérée par Skaffold
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: client-storage
          persistentVolumeClaim:
            claimName: client-pvc
