Pod-client/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: client
spec:
  selector:
    app: pod-client
  ports:
    - name: db-port
      protocol: TCP
      port: 5433
      targetPort: 5433
    - name: api-port
      protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP  # Traefik gère le routage
