Pod-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: pod-client
  ports:
    - name: db-port
      protocol: TCP
      port: 5433  # PostgreSQL (peut être utilisé pour des connexions externes)
      targetPort: 5433
    - name: api-port
      protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP  # Traefik gère le routage
