Pod-client/client-ingressroute.yaml
# Pod-client/client-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-public
  namespace: client
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/client/api`)
      kind: Rule
      priority: 12
      services:
        - name: client-service
          namespace: client
          port: 3001
      middlewares:
        - name: strip-client-api-prefix
          namespace: client

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-users-client
  namespace: client
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/client/api/users/interservice`)
      kind: Rule
      priority: 13
      services:
        - name: client-service
          namespace: client
          port: 3001
      middlewares:
        - name: strip-client-api-prefix
          namespace: client
        - name: access-middleware
          namespace: access

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-client-api-prefix
  namespace: client
spec:
  stripPrefix:
    prefixes:
      - /client/api
